@@ -127,6 +127,8 @@ class Ssh(EngineClient):
 
         self.popen.stdin.close()
         self.popen.stdout.close()
+        if self.popen.stderr:
+            self.popen.stderr.close()
 
         if rc >= 0:
             self.worker._on_node_rc(self.key, rc)
